Created start confirm and set page

--- a/app/src/pages/iwalkthrough/iwalkthrough.html
+++ b/app/src/pages/iwalkthrough/iwalkthrough.html
@@ -10,8 +10,8 @@
       <ion-toolbar>
       </ion-toolbar>
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
-      <h2 class="slide-title">Ready to Join?</h2>
-      <button ion-button large clear icon-right color="primary">
+      <h2 class="slide-title">Ready to Start?</h2>
+      <button ion-button large clear icon-right color="primary" [navPush]="startBondfirePage">
         Continue
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
