--- a/app/src/pages/allset/allset.html
+++ b/app/src/pages/allset/allset.html
@@ -7,16 +7,14 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <p>
-    05/05/17 : 5:00pm - 7:00pm
-  </p>
-  <p>
-      4 Spots Available
-</p>
+<h3>Congrats, you just set up a  Bondfire! Let's get the word out, share it on all your social media!</h3>
 
   <br>
-  <button ion-button secondary menuToggle>$20 Tickets</button>
-  <button ion-button secondary menuToggle>Confirm</button>
+  <button ion-button secondary menuToggle>Facebook</button>
+  <button ion-button secondary menuToggle>Twitter</button>
+  <br>
+  <h3>Check out our Docs to help you host a successful Bondfire <a href="">here</a> </h3>
+  <button ion-button secondary menuToggle [navPush]="iProfilePage">View Your Bondfires</button>
 </ion-content>
 
 <!--<sliding-drawer [options]="drawerOptions">
